--- a/README
+++ b/README
@@ -13,3 +13,74 @@ https://github.com/karpathy/ng-video-lecture
 I used google colab for my initial playground:
 https://colab.research.google.com/drive/1l6sV3asJDoHQzKZ9UqFDiqMlfx0mrNvm?usp=sharing
 
+
+
+Example Output (10k with learning rate of 1e-3, then another 10k on the reulting model at lr of 1e-4):
+
+YORK:
+Romeo, which that year mades, and you enamight.
+
+MENENIUS:
+I'll buy fought the traitor:
+For enfright you, not prizy our
+Yourself full heart my false.
+
+KING HENRENSIO:
+Of thy living the deep me now on you musel lind tear.
+How my crimence up; and plew you love.
+I croop'd, gods, but your like again Willo your piicks with this 
+if his hopen wild have his buy: kingn not the son; if how what thy flesh the pain.
+Forgon? I am I so, as, you are advancably great?
+
+Ghost Musican:
+His lips, from me.
+
+MOPEERAUL:
+Reary.
+You come withmes how; myself powers.
+
+NORTHUMBERRY; Henry:
+
+HORTENE:
+Ayband.
+
+JULIET:
+I'll shoutch glory
+In as he lap in somerues Peet me over:
+He pass'd your counted, by me: in doubt,
+Or Romeo, not come, she spenish, no duke forgot me
+You courbeakes against us weak so! who love no man stoople I?    
+
+GLOUCESTER:
+I should I speak post
+no noble thing fellow of this deter no stee them
+That you on what those there, speciled be thought him the is.    
+
+BENVOLIO:
+You therefore! thou come.
+
+MARIANA:
+Are you, go, I husband; he when the very hear to take all not weep should
+As be resentings and early infin itself:
+O this factory, and a blood and blood
+AIntrancious in closile, the ancience of Glouchard their pleing brought to shall eat to be:
+thas joy adful HowerertaNT:
+Not lose, the oldro's dajes, I from his must hoped;
+And but his fail confin. What'st thou at my life the beseech are volemning to them. Gentleman:
+No, I think years no Twomenteny, delal!
+How no yield best are holy to her be; I sometime, I them wars, eves;
+Rever to a a--
+
+AUFID:
+O therefore is comfourable, shors
+Ere you, dried? shame, he in the house:
+
+And as I'll suppiciation confinend entrus, whele,
+Burn make but cry, thou with amongly
+As loget her at the sworn fair? But I hope but the peers.
+
+QUEEN ELIZESHER:
+Nor is a scear.
+Were is as not yet, yet is and gracious
+Than take the bed flance is PRupartion: I'll not whom fourth me suppecior:
+Ghen be a anail
