--- a/README
+++ b/README
@@ -4,6 +4,9 @@ Learn about LLMs and create a very simple one using shakesphere transcripts.
 
 Features Added:
 - save and load checkpoints
+- memory to add context and improve continuity
+
+
 
 ACKNOWLEDGEMENTS:
 My code was adapted from this youtube video and github:
